# turing-cli

./: .gitignore  MIGRATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  USAGE_EXAMPLES.md  pyproject.toml  setup.py
config/: mcp_tools.yaml
config_files/: agents.yaml
config_files/prompts/: sql_injection.md
docs/: DEVELOPER_GUIDE.md  REFACTOR_PLAN.md  WORKFLOW_GUIDE.md
examples/: full_audit_workflow.py
my_audit/: README.md  my_audit_workflow.py
my_audit/agents/: custom_agent.py
my_audit/config/: config.yaml
tests/: test_git.py  test_models.py  test_opencode.py  test_workflow.py
tests/fixtures/: scan_result.json
turing_cli/: cli.py  main.py
turing_cli/agents/: __init__.py  context.py  runner.py  runner_debug.py
turing_cli/agents/builtin/: __init__.py  base.py  code_audit.py
turing_cli/clients/: mcp_client.py
turing_cli/commands/: __init__.py  audit.py  init.py  log.py  retry.py  status.py
turing_cli/config/: __init__.py  loader.py  logging_config.py  opencode.yaml
turing_cli/core/: __init__.py  vuln_workflow.py  workflow.py
turing_cli/core/opencode/: client.py  executor.py  session_manager.py
turing_cli/git_ops/: __init__.py  manager.py  rollback.py
turing_cli/mcp/: __init__.py  executor.py  registry.py
turing_cli/mcp/services/: __init__.py  audit_service.py
turing_cli/models/: __init__.py  audit.py  deliverable.py  validation.py
turing_cli/validators/: __init__.py  audit_validators.py  base.py
turing_cli/workflow/: __init__.py  builder.py  engine.py  groups.py  langgraph_engine.py  models.py  state_manager.py
